--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,18 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+langchain = "*"
+langgraph = "*"
+langchain-core = "*"
+langchain-openai = "*"
+tavily-python = "*"
+pytrends = "*"
+pandas = "*"
+beautifulsoup4 = "*"
+httpx = "*"
+python-dotenv = "*"
+langchain-community = "*"
+watchdog = "*"
 
 [dev-packages]
 
